add tabs example

--- a/pages/advanced/satori.mdx
+++ b/pages/advanced/satori.mdx
@@ -1,3 +1,17 @@
+import { Tab, Tabs } from 'nextra-theme-docs'
+
 # Satori
 
 Satori (悟り) is a Japanese Buddhist term for awakening, "comprehension; understanding".
+ 
+<Tabs items={['JAVASCRIPT', 'IOS', 'ANDROID']}>
+  <Tab>
+    **pNPM**: Fast, disk space efficient package manager.
+  </Tab>
+  <Tab>
+    **npm** is a package manager for the JavaScript programming language.
+  </Tab>
+  <Tab>
+    **Yarn** is a software packaging system.
+  </Tab>
+</Tabs>
